AP. Articles. Created and edit. Parent search. Wrong position has been fixed.

--- a/public/css/admin_layout.css
+++ b/public/css/admin_layout.css
@@ -1527,7 +1527,7 @@ component used through many sections.*/
 .admin-panel-create-edit-entity-directory-list {
     position: absolute;
     top: 317.1px; 
-    left: 208.5px;
+    left: 616.5px;
     width: 427px;
     border: 1px solid grey;
     background-color: white;
@@ -1624,7 +1624,7 @@ component used through many sections.*/
 .admin-panel-create-edit-entity-drop-down-list {
     position: absolute;
     top: 317.1px; 
-    left: 208.5px;
+    left: 616.5px;
     width: 427px;
     border: 1px solid grey;
     background-color: white;
